--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	</head>
 	<body>
 		<div class="card">
-				<img  class="mobile" src="images/image-product-mobile.jpg" alt="" />
-				<img class="desktop" src="images/image-product-desktop.jpg" alt="" style="display: none;">
+				<img  class="mobile" src="images/image-product-mobile.jpg" alt="mobile" />
+				<img class="desktop" src="images/image-product-desktop.jpg" alt="desktop" style="display: none;">
 			<div class="container">
 				<p class="perfume">PERFUME</p>
 				<h1>Gabrielle Essence Eau De Parfum</h1>
@@ -41,8 +41,8 @@
 				</p>
 				<p class="price">$149.99</p>
 				<p class="discount"> <s>$169.99</s></p>	
-				<a href="">
-					<div class="button"><p href="">Add to Cart</p></div>
+				<a href="#">
+					<div class="button"><p>Add to Cart</p></div>
 			</div>
 			</a
 				>
